# B2E-UNL

./: .cursorrules  .env.example  .gitattributes  .gitignore  .gitleaks.toml  Makefile  README.md  docker-compose.yml  package.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  devsecops.yml
.jules/: sentinel.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  database.py  deps.py  middleware.py  security.py
apps/api/app/domains/auth/: models.py  router.py  schemas.py  services.py
apps/api/app/domains/challenges/: ai_service.py  models.py  router.py  schemas.py  services.py
apps/api/app/domains/proposals/: models.py  router.py  schemas.py  services.py
apps/api/tests/: test_challenge_public_anonymization.py
apps/web/: Dockerfile  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
apps/web/src/: env.d.ts  middleware.ts
apps/web/src/data/: Projects.ts  (+1 more)
scripts/: seed-admin-user.py  setup-env.sh  test-db-connection.py  validate-project.sh  verify-before-push.sh
supabase/: config.toml  seed.sql
supabase/migrations/: 20260519000000_initial_schema.sql  20260520120000_company_commercial_fields.sql  20260520140000_admin_proposals_policy.sql  20260520160000_company_approval.sql  20260520180000_fix_profiles_rls_recursion.sql  20260520200000_company_oauth_rpc.sql  20260526121500_add_privacy_mode_to_challenges.sql  20260526130000_create_public_challenges_view.sql  20260526133000_create_get_public_challenges_function.sql
(+59 files in other folders)
